# GitHub-Projects

./: .gitignore  README.md
e-commerce-marketing-automation-agent/notebooks/: 01-etl-pipeline-and-database-setup.ipynb
march-machine-learning-mania-2026/: .gitignore  licence  pyproject.toml
march-machine-learning-mania-2026/notebooks/: 01-exploration-cleaning_feature_engineering.ipynb
synthetic-e-commerce-electronic-sales-2025-dataset/: requirements.txt  setup.py
synthetic-e-commerce-electronic-sales-2025-dataset/generator/: main_generator.py
synthetic-e-commerce-electronic-sales-2025-dataset/notebook/: 01-comprehensive-eda-seasonality-visualization.ipynb
synthetic-e-commerce-electronic-sales-2025-dataset/src/: generator_methods.py
synthetic-e-commerce-electronic-sales-2025-dataset/src.egg-info/: PKG-INFO  SOURCES.txt  licence
top-50-cryptocurrency-data-2014-2026-analysis/: pyproject.toml
top-50-cryptocurrency-data-2014-2026-analysis/data/raw/: crypto50_metadata.csv
top-50-cryptocurrency-data-2014-2026-analysis/data/raw/crypto50_data/: AAVE.csv  ADA.csv  ALGO.csv  APT21794.csv  ARB11841.csv  ATOM.csv  AVAX.csv  BCH.csv  BNB.csv  BONK.csv  BTC.csv  CRO.csv  DAI.csv  DOGE.csv  DOT.csv  ETC.csv  ETH.csv  FET.csv  FIL.csv  FLOKI.csv  FTM.csv  GRT6719.csv  HBAR.csv  HYPE.csv  ICP.csv  IMX10603.csv  INJ.csv  KAS.csv  LINK.csv  LTC.csv  MATIC.csv  MKR.csv  MNT.csv  NEAR.csv  PEPE24478.csv  RNDR.csv  SHIB.csv  SOL.csv  STX4847.csv  SUI20947.csv  (+10 more)
top-50-cryptocurrency-data-2014-2026-analysis/notebooks/: 00-project-readme.ipynb  01-exploration-and-cleaning.ipynb
